--- a/src/libhw/SConscript
+++ b/src/libhw/SConscript
@@ -18,13 +18,13 @@ elif 'linux' in sys.platform:
 
 glEnv = env.Clone()
 glEnv.Append(CPPDEFINES = [['MTS_BUILD_MODULE', 'MTS_MODULE_HW']] )
-if glEnv.has_key('GLLIB'):
+if 'GLLIB' in glEnv:
         glEnv.Prepend(LIBS=glEnv['GLLIB'])
-if glEnv.has_key('GLLIBDIR'):
+if 'GLLIBDIR' in glEnv:
         glEnv.Prepend(LIBPATH=glEnv['GLLIBDIR'])
-if glEnv.has_key('GLFLAGS'):
+if 'GLFLAGS' in glEnv:
         glEnv.Prepend(CPPFLAGS=glEnv['GLFLAGS'])
-if glEnv.has_key('GLINCLUDE'):
+if 'GLINCLUDE' in glEnv:
         glEnv.Prepend(CPPPATH=glEnv['GLINCLUDE'])
 
 if sys.platform == 'darwin':
